# rosetta

./: .openspec-apply.json  README.md  apply.json  apply_cmd_out.json  apply_utf8.json  firebase.json  firestore.rules  help.txt  openspec-help-utf8.txt  status.json  status_utf8.json  storage.rules  validate-output.json  validate-output2.json  validate-output3.json
.claude/: settings.local.json
.github/workflows/: deploy.yml
frontend/: firestore.rules  package-lock.json  package.json  storage.rules
frontend/src/: main.js
frontend/src/components/: rw-admin.js  rw-app.js  rw-auth.js  rw-dashboard.js  rw-uploader.js
frontend/src/lib/: firebase.js
functions/: index.js  package-lock.json  package.json
k3s/base/: pvc-lancedb.yaml  pvc-models.yaml
k3s/router/: main.py
k3s/small-llm/: deployment.yaml  service.yaml
k3s/tiny-llm/: deployment.yaml  service.yaml
openspec/changes/archive/2026-03-18-chore-firebase-ci-cd/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-18-feat-frontend-teacher/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-18-feat-rag-rust-workers/: tasks.md
openspec/changes/archive/2026-03-19-backfill-firebase-auth-and-functions/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-19-chore-firebase-deployment-bootstrap/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-19-feat-firebase-social-auth/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-20-backfill-admin-account-management/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-20-backfill-gemini-document-processing/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-24-feat-lancedb-and-rl-extraction/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-26-fix-llm-debug-logs/: .openspec.yaml  design.md  proposal.md  (+1 more)
openspec/changes/feat-candle-tiny-student/: design.md  proposal.md  tasks.md
openspec/changes/feat-firebase-security-rules/: design.md  proposal.md  tasks.md
openspec/changes/feat-k3s-dual-student/: design.md  tasks.md
openspec/changes/feat-rag-rust-workers/: design.md  proposal.md
openspec/changes/feat-vertex-ai-rl-pipeline/: design.md  tasks.md
openspec/specs/account-administration/: spec.md
openspec/specs/document-dual-routing/: spec.md
openspec/specs/firebase-deployment/: spec.md
openspec/specs/k3s-deployment/: spec.md
openspec/specs/pdf-document-processing/: spec.md
openspec/specs/rw-auth/: spec.md
openspec/specs/teacher-ui/: spec.md
openspec/specs/test-spec/: spec.md
openspec/specs/worker-auth/: spec.md
python-training/: Dockerfile  requirements.txt  submit_job.sh  train.py
rust-workers/: Cargo.toml  Dockerfile.auth  Dockerfile.html
rust-workers/shared-gcp/: Cargo.toml
rust-workers/shared-gcp/src/: event.rs  firestore.rs  lib.rs  rl.rs  server.rs  storage.rs  vector.rs  yaml.rs
rust-workers/tiny-student/: Cargo.toml
rust-workers/worker-auth/: Cargo.toml
rust-workers/worker-auth/src/: main.rs
rust-workers/worker-html/: Cargo.toml
rust-workers/worker-html/src/: main.rs
rust-workers/worker-jar/: Cargo.toml
rust-workers/worker-jar/src/: main.rs
rust-workers/worker-pdf/: Cargo.toml
rust-workers/worker-pdf/src/: main.rs
(+22 files in other folders)
