[package]
name = "shared-gcp"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
google-cloud-storage = "0.21"
google-cloud-firestore = "0.26"
google-cloud-auth = "0.16"
google-cloud-default = { version = "0.6", features = ["storage", "firestore"] }
serde_yaml = "0.9"
