[package]
name = "shared-gcp"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
google-cloud-storage = "*"
firestore = "0.48.0"
serde_yaml = "0.9"
bytes = "1.0"
