[package]
name = "worker-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
shared-gcp = { path = "../shared-gcp" }
reqwest = { version = "0.12.2", features = ["json"] }
log = "0.4.21"
env_logger = "0.11.3"
cloudevents-sdk = { version = "0.9", features = ["axum"] }
