[package]
name = "worker-jar"
version = "0.1.0"
edition = "2021"

[dependencies]
shared-gcp = { path = "../shared-gcp" }
tokio = { version = "1.37", features = ["full", "process"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["clock"] }
google-cloud-auth = "1.7.0"
